--- a/src/Components/Timer/Timer.css
+++ b/src/Components/Timer/Timer.css
@@ -9,18 +9,21 @@ body {
   height: 100%;
 }
 
-.app {
+.container {
   background-color: purple;
   color: white;
   font-family: "Open Sans", sans-serif;
   height: 100vh;
   text-align: center;
+  /* justify-content: center; */
 }
 
 .header {
   font-size: calc(20px + 2vmin);
   line-height: 2;
   text-transform: capitalize;
+  /* text-align: center; */
+  /* justify-content: center; */
 }
 
 .container {
@@ -49,6 +52,7 @@ body {
   border-right: solid 1px rgba(255, 255, 255, 0.2);
   font-weight: 300;
   padding: 10px;
+  text-align: center;
 }
 
 .col-4:last-child .box {
@@ -58,8 +62,12 @@ body {
 .box p {
   font-size: calc(16px + 2vmin);
   margin: 0;
+  /* text-align: center; */
+  /* justify-content: center; */
 }
 
 .text {
   font-size: 14px;
+  /* text-align: center; */
+  /* justify-content: center; */
 }
